--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 #cc > div > div {
   justify-content: stretch;
+  align-content: stretch;
   margin: 5px;
   background-color: rgba(136, 201, 218, 0.918);
   display: grid;
@@ -17,8 +18,8 @@
 
 .hide {
   border: 1px solid black;
-  background-color: aqua;
-  justify-content: center;
+  background-color: rgb(0, 255, 255);
+  justify-content: stretch;
 }
 
 .buttons {
@@ -67,4 +68,10 @@ body {
 
 .draggable {
   cursor: pointer;
+}
+
+@media screen and (max-width: 960px) {
+  #backlog {
+    display: none;
+  }
 }
