--- a/style.css
+++ b/style.css
@@ -1,12 +1,46 @@
-#calendar > div {
+body {
+  background-color: grey;
+  margin: 40px;
+  display: grid;
+  grid-template-columns: auto 320px;
+}
+
+#buttons {
+  display: grid;
+  grid-template-columns: 100px 100px;
+  justify-content: flex-end;
+  margin: 15px;
+}
+
+.button {
+  border: 1px solid black;
+  background-color: aquamarine;
+  margin: 5px;
+}
+
+.toprow {
   justify-content: stretch;
   grid-auto-flow: column;
   display: grid;
   grid-template-columns: 100px 130px 130px 130px 130px 130px 130px 130px;
-  height: 30px + 1fr;
-  margin: 5px;
+  height: 100px + 1fr;
+  margin: 3px;
+  background-color: darkslategray;
 }
-#calendar > div > div {
+
+.row {
+  justify-content: stretch;
+  grid-auto-flow: column;
+  display: grid;
+  grid-template-columns: 100px 130px 130px 130px 130px 130px 130px 130px;
+  height: 100px + 1fr;
+  min-height: 60px;
+  margin: 5px;
+  background-color: darkslategray;
+}
+
+.droppable,
+.droppableUSER {
   justify-content: stretch;
   align-content: stretch;
   margin: 5px;
@@ -16,30 +50,35 @@
   text-align: center;
 }
 
-.hide {
+.calendar-task {
+  margin: 5px;
   border: 1px solid black;
   background-color: rgb(0, 255, 255);
   justify-content: stretch;
 }
 
-body {
-  background-color: grey;
-  margin: 40px;
-  display: grid;
-  grid-template-columns: auto 320px;
-}
-
-.novis {
-  color: white;
+@media screen and (max-width: 800px) {
+  #optional {
+    display: none;
+  }
 }
 
 #backlog {
   display: grid;
-  grid-template-rows: repeat(150px);
+  grid-template-rows: 100px;
   background-color: gray;
 }
 
-#backlog > div:hover::after {
+.backlog-task {
+  position: relative;
+  width: 320px;
+  border: 1px solid black;
+  text-align: center;
+  text-justify: center;
+  cursor: pointer;
+}
+
+.backlog-task:hover::after {
   content: attr(hint);
   position: absolute;
   left: 0;
@@ -51,22 +90,4 @@ body {
   font-size: 14px;
   padding: 0px 0;
   width: 100%;
-}
-
-#backlog > div {
-  position: relative;
-  width: 320px;
-  border: 1px solid black;
-  text-align: center;
-  text-justify: center;
-}
-
-.draggable {
-  cursor: pointer;
-}
-
-@media screen and (max-width: 800px) {
-  #backlog {
-    display: none;
-  }
 }
