--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: grey;
   margin: 40px;
   display: grid;
-  grid-template-columns: auto 320px;
+  grid-template-columns: auto 220px;
 }
 
 #buttons {
@@ -39,8 +39,7 @@ body {
   background-color: darkslategray;
 }
 
-.droppable,
-.droppableUSER,
+.row > div,
 .header-date {
   justify-content: stretch;
   align-content: stretch;
@@ -72,7 +71,7 @@ body {
 
 .backlog-task {
   position: relative;
-  width: 320px;
+  width: 220px;
   border: 1px solid black;
   text-align: center;
   text-justify: center;
