--- a/style.css
+++ b/style.css
@@ -1,98 +1,125 @@
 body {
-  background-color: grey;
-  margin: 40px;
+  margin: 0px 40px 0px 40px;
   display: grid;
-  grid-template-columns: auto 220px;
+  grid-template-columns: auto 320px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue",
+    sans-serif;
+}
+
+#main {
+  margin-right: 40px;
+}
+
+#optional {
+  margin-top: 60px;
+}
+
+@media screen and (max-width: 800px) {
+  #main {
+    margin-right: 0px;
+  }
+  #optional {
+    display: none;
+  }
+  body {
+    grid-template-columns: 100%;
+  }
 }
 
 #buttons {
   display: grid;
   grid-template-columns: 100px 100px;
-  justify-content: flex-end;
-  margin: 15px;
+  justify-content: center;
+  margin: 12px;
 }
 
 .button {
-  border: 1px solid black;
-  background-color: aquamarine;
-  margin: 5px;
-}
-
-.toprow {
-  justify-content: stretch;
-  grid-auto-flow: column;
-  display: grid;
-  grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
-  height: 100px + 1fr;
-  margin: 3px;
-  background-color: darkslategray;
-}
-
-.row {
-  justify-content: stretch;
-  grid-auto-flow: column;
-  display: grid;
-  grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
-  height: 100px + 1fr;
-  min-height: 60px;
-  margin: 5px;
-  background-color: darkslategray;
-}
-
-.row > div,
-.header-date {
-  justify-content: stretch;
-  align-content: stretch;
-  margin: 5px;
-  background-color: rgba(136, 201, 218, 0.918);
-  display: grid;
-  grid-template-rows: repeat(1fr);
+  color: #fff;
+  background-color: #80deea;
   text-align: center;
+  cursor: pointer;
+  line-height: 36px;
+  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%),
+    0 1px 5px 0 rgb(0 0 0 / 20%);
+  margin: 0px 10px;
+}
+
+#calendar {
+  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%),
+    0 1px 5px 0 rgb(0 0 0 / 20%);
+}
+
+.row,
+.toprow {
+  display: grid;
+  grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
+  min-height: 60px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.row:nth-child(odd) {
+  background-color: #e0e0e05d;
+}
+
+.droppable {
+  display: grid;
+  text-align: center;
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.header-date {
+  display: grid;
+  text-align: center;
+  align-items: center;
+  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%);
+  background-color: #bdbdbd;
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .calendar-task {
-  margin: 5px;
-  border: 1px solid black;
-  background-color: rgb(0, 255, 255);
-  justify-content: stretch;
-}
-
-@media screen and (max-width: 800px) {
-  #optional {
-    display: none;
-  }
+  display: grid;
+  align-items: center;
+  margin: 1px;
+  background-color: #80deea;
 }
 
 #backlog {
   display: grid;
-  grid-template-rows: auto;
-  background-color: gray;
+  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%),
+    0 1px 5px 0 rgb(0 0 0 / 20%);
+}
+
+#backlogheader {
+  background-color: #bdbdbd;
+  height: 60px;
+  font-size: large;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
+
+#search {
+  width: inherit;
+  font-size: 18px;
 }
 
 .backlog-task {
   position: relative;
-  width: 220px;
-  border: 1px solid black;
-  text-align: center;
-  text-justify: center;
   cursor: pointer;
-  min-height: 30px;
+  min-height: 40px;
   font-size: 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  display: grid;
+  align-items: center;
+  justify-content: center;
 }
 
 .backlog-task:hover {
-  font-size: 15px;
-}
-
-.backlog-task-dragging {
-  position: relative;
-  width: 320px;
-  border: 0px;
-  text-align: center;
-  text-justify: center;
-  cursor: pointer;
-  min-height: 30px;
-  font-size: 20px;
+  background-color: rgb(128, 222, 234);
+  align-items: baseline;
+  color: black;
+  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%),
+    0 1px 5px 0 rgb(0 0 0 / 20%);
 }
 
 .backlog-task:hover::after {
@@ -100,12 +127,20 @@ body {
   position: absolute;
   left: 0;
   bottom: 0;
-
   text-decoration: transparent;
-  color: black;
   text-align: center;
-
   font-size: 14px;
   padding: 0px 0;
   width: 100%;
+}
+
+.backlog-task-dragging {
+  background-color: #80deea;
+  position: relative;
+  width: 8%;
+  height: 60px;
+  border: 0px;
+  text-align: center;
+  cursor: pointer;
+  font-size: 20px;
 }
