--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
   margin: 0px 40px 0px 40px;
   display: grid;
-  grid-template-columns: auto 320px;
+  grid-template-columns: auto 280px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue",
     sans-serif;
 }
 
 #main {
   margin-right: 40px;
+  min-width: 1050px;
 }
 
 #optional {
@@ -16,7 +17,7 @@ body {
 
 @media screen and (max-width: 800px) {
   #main {
-    margin-right: 0px;
+    margin-right: 100px;
   }
   #optional {
     display: none;
@@ -65,6 +66,7 @@ body {
   display: grid;
   text-align: center;
   border-right: 1px solid rgba(0, 0, 0, 0.12);
+  min-width: fit-content;
 }
 
 .header-date {
@@ -142,5 +144,5 @@ body {
   border: 0px;
   text-align: center;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 16px;
 }
