--- a/style.css
+++ b/style.css
@@ -85,10 +85,11 @@ body {
   background-color: #80deea;
 }
 
-#backlog {
+.backlog {
   display: grid;
   box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%),
     0 1px 5px 0 rgb(0 0 0 / 20%);
+  margin-bottom: 660px;
 }
 
 #backlogheader {
@@ -100,7 +101,7 @@ body {
   align-content: center;
 }
 
-#search {
+.search {
   width: inherit;
   font-size: 18px;
 }
